<resources>
    <string name="app_name">Peti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="optional">Optional</string>
    <string name="phone_number">Phone Number</string>
    <string name="_05xx_xxx_xx_xx">05xx xxx xx xx</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="loading_fragment_text1">Get ready to mate your pet \n or get a new pet</string>
    <string name="loading_fragment_text2">Giving everyone the change \n to find their furry soulmate</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user">User</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="notification">Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up_kucuk">Sign Up</string>
    <string name="continue_text">Continue</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_kucuk">Sign In</string>
    <string name="breed">Breed</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="sex">Sex</string>
    <string name="goal">Goal</string>
    <string name="the_password_does_not_match">The Password Does Not Match</string>
    <string name="please_fill_in_all_fields">Please Fill in All Fields</string>
    <string name="permission_needed">Permission needed!</string>
    <string name="permission_needed_for_gallery">Permission needed for gallery</string>
    <string name="give_permission">Give Permission</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_type">Pet Type</string>
    <string name="pet_sex">Pet Sex</string>
    <string name="pet_goal">Pet Goal</string>
    <string name="pet_age">Pet Age</string>
    <string name="vaccination">Vaccination</string>
    <string name="pet_breed">Pet Breed</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="my_pets">My Pets</string>
    <string name="it_seems_that_you_haven_t_n_add_any_pets">It seems that you haven\'t \n add any pets</string>
    <string name="your_list_is_empty">Your List is Empty</string>
    <string name="the_post_has_not_been_shared_yet">The post has not been shared yet</string>
    <string name="it_looks_like_no_pets_have_nbeen_added_at_all">It looks like no pets have\nbeen added at all</string>
    <string name="send_a_message">Send A Message</string>
    <string name="call">Call</string>
    <string name="edit">Edit</string>
    <string name="pet_owner">Pet Owner</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ownership">Ownership</string>
    <string name="matching">Matching</string>
    <string name="vaccinated">Vaccinated</string>
    <string name="unvaccinated">Unvaccinated</string>
    <string name="filter">Filter</string>
    <string name="delete_all_filters">Delete All Filters</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="your_pet_s_name_cannot_be_changed_later">Your pet\'s name cannot be changed later</string>
    <string name="location">Location</string>
    <string name="you_haven_t_talked_to_anyone_yet">You haven\'t talked to anyone yet</string>
    <string name="how_about_writing_to_someone">How about writing to someone</string>
    <string name="about_the_app_developer">About The App Developer</string>
    <string name="about_developer">Hello, my animal-loving friends. I am Ümit Yetişir. I was born in Ankara in 1998. I graduated from Bursa Uludag University electrical and electronics department in 2023. I have been working on native android development since 2022. My goal in making the application is to be able to stand out in job applications. It is not an application that I developed expecting any income. If I have made mistakes, I apologize to you.</string>
    <string name="peti">Peti</string>
    <string name="write_a_message">Write a message</string>
    <string name="permission_gallery">Permission is required to access the gallery!</string>
    <string name="permission_allow">Allow</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="log_out">Log Out</string>
    <string name="password_toggle_description">Show password for password field</string>
    <string name="confirm_password_toggle_description">Show password for confirm password field</string>
</resources>