<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.homeScreen.bottomSheet.FilterBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/petTypeTextView"
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_type"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drag_handle" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petTypeChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petTypeTextView"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textAlignment="center" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/petSexTextView"
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_sex"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petTypeChipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petSexChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petSexTextView"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAlignment="center" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/petGoalTextView"
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_goal"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petSexChipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petGoalChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petGoalTextView"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ownership"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matching"
                android:textAlignment="center" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/petAgeTextView"
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_age"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petGoalChipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petAgeChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petAgeTextView"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0-1"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1-2"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2-3"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3-4"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4-5"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5-6"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6-7"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7-8"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8+"
                android:textAlignment="center" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/petVacTextView"
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vaccination"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petAgeChipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petVacChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petVacTextView"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccinated"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unvaccinated"
                android:textAlignment="center" />
        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:id="@+id/messageAndCallButtonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/petVacChipGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/filterButton"
                style="@style/buttonColor"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/filter" />


            <Button
                android:id="@+id/deleteAllFilterButton"
                style="@style/secondaryButtonColor"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/delete_all_filters" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>