<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".view.authentication.sign_in_screen.SignInScreenFragment">

    <TextView
        android:id="@+id/signInText"
        style="@style/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:gravity="center"
        android:text="@string/login_to_your_account"
        android:textSize="@dimen/text_size28"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/signInImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/sign_in_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eMailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/email"
        app:boxStrokeWidthFocused="1dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_8"
        android:hint="@string/password"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/accountText"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:text="@string/don_t_have_an_account_yet"
            android:textSize="@dimen/text_size18" />

        <Button
            android:id="@+id/signUpTextButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_kucuk"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="@id/accountText"
            app:layout_constraintStart_toEndOf="@id/accountText"
            app:layout_constraintTop_toTopOf="@id/accountText" />
    </LinearLayout>

    <Button
        android:id="@+id/continueButton"
        style="@style/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:layout_marginBottom="8dp"
        android:text="@string/continue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountText" />

</LinearLayout>